# QueryMesh

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  PROGRESS.md  README.md  pyproject.toml  spec.md  spec_phase2.md
.github/workflows/: ci.yml  eval-manual.yml
agents/: __init__.py  analytics_agent.py  code_agent.py  jsonutil.py  orchestrator.py  rag_agent.py  synthesizer.py  vertex.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_ingestion_jobs_table.py  003_user_portal_login.py  004_ingest_service_user.py  005_eval_reports_table.py  006_google_oauth_sub.py
api/: account_portal.py  auth.py  deps.py  google_oauth.py  ingestion_job_protocol.py  ingestion_job_store.py  ingestion_jobs.py  ingestion_runner.py  ingestion_schedule.py  main.py  passwords.py  portal_jwt.py  rate_limit.py  runtime_info.py  settings.py
api/routes/: account.py  eval_reports.py  ingest.py  query.py
api/schemas/: account.py  eval_report.py  ingest.py  query.py
demo/: querymesh-demo.html
docs/: cloud_logging_metrics.md  corpus_runbook.md  local_dev.md  production_infra.md
docs/architecture/: 01-system-overview.excalidraw  QueryMesh - System Architecture.excalidraw  QueryMesh — GCP Infrastructure.excalidraw  QueryMesh — LangGraph Agent Pipeline.excalidraw  gcp-infrastructure.excalidraw  ingestion-pipeline.excalidraw  langgraph-pipeline.excalidraw  memory-architecture.excalidraw  system-overview.excalidraw
e2b/: Dockerfile
evals/: __init__.py  golden_dataset.json  golden_loader.py  harvest.py  ragas_eval.py  test_deepeval_suite.py
graph/: conversation.py  message_json.py  pipeline.py  source_cards.py
infra/: Dockerfile  README.md  cloudbuild-eval.yaml  cloudbuild-web.yaml  cloudbuild.pr.yaml  cloudbuild.tf.yaml  cloudbuild.yaml  docker-compose.yml
infra/terraform/: README.md  apis.tf  iam.tf  log_metrics.tf.example  main.tf  network.tf  outputs.tf  private_services.tf  qdrant.tf  redis.tf  secrets.tf  sql.tf  terraform.tfvars.example  variables.tf
ingestion/: __init__.py  chunker.py  embeddings.py  indexer.py  loader.py
memory/: checkpointer.py  database.py  eval_report_store.py  longterm.py  redis_client.py  session.py  session_envelope.py
observability/: __init__.py  gcp_monitoring.py  instrumentation.py  query_intent.py  query_request_log.py
scripts/: README.md  bootstrap_bq.py  bootstrap_gcp.sh  check_secrets.sh  fetch_gcp_corpus_pdfs.sh  fetch_gemini_enterprise_agent_platform_docs.py  fetch_next26_corpus.py  mint_api_key.py  park_gcp_compute.sh  prepare_local.sh  run_gcp_eval.sh  sync_gcp_portal_secrets.sh  verify_gcp_portal.sh  wake_gcp_compute.sh
tests/: conftest.py  ingestion_memory_repo.py  test_account_portal_integration.py  test_account_portal_unit.py  test_analytics_agent_unit.py  test_auth_integration.py  test_auth_unit.py  test_bigquery_tool.py  test_chunker.py  test_code_agent_unit.py  test_code_exec_tool.py  test_conversation_messages_unit.py  test_database_ping_unit.py  test_eval_reports_integration.py  test_gcp_monitoring_unit.py  test_golden_loader_unit.py  test_golden_specialist_profiles_unit.py  test_graph_unit.py  test_health.py  test_health_degraded.py  test_ingest_api_unit.py  test_langfuse_tracing_unit.py  test_longterm_integration.py  test_longterm_unit.py  test_message_json_unit.py  test_migrations_integration.py  test_orchestrator_unit.py  test_parallel_fanout_unit.py  test_provisional_json_message_unit.py  test_query_auth.py  test_query_intent_unit.py  test_query_rate_limit.py  test_query_request_log_unit.py  test_rag_unit.py  test_retrieval_lexical_rrf_unit.py  test_retrieval_rerank_unit.py  test_session_unit.py  test_synthesizer_unit.py
tools/: __init__.py  bigquery_tool.py  code_exec_tool.py  memory_tool.py  retrieval_tool.py
web/: .env.example  .gitignore  Dockerfile  README.md  next-env.d.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/chat/: layout.tsx  page.tsx
web/app/eval/: page.tsx
web/app/eval/[id]/: page.tsx
web/app/keys/: page.tsx
web/app/login/: page.tsx
web/app/oauth/callback/: page.tsx
web/app/register/: page.tsx
web/components/: ApiOfflineNotice.tsx  AppBackdrop.tsx  AuthControls.tsx  Nav.tsx  NavRoutes.tsx  QueryMeshLogo.tsx  SurfaceCard.tsx
web/lib/: api-reachability.ts  auth-storage.ts  chat-session-titles.ts  portal-jwt.ts  querymesh.ts
web/scripts/: generate-favicons.mjs
