[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "querymesh"
version = "0.1.0"
description = "Multi-agent GCP knowledge assistant (internal)."
requires-python = ">=3.12"
license = "LicenseRef-Proprietary"

dependencies = [
  "alembic>=1.18.4",
  "asyncpg>=0.31.0",
  "bcrypt>=4.2",
  "pyjwt>=2.9",
  "fastapi>=0.115",
  "google-cloud-bigquery>=3.41",
  "google-cloud-aiplatform>=1.75",
  "langgraph>=1.1.10",
  "langgraph-checkpoint-postgres>=3.0.5",
  "llama-index-core>=0.12.0",
  "llama-index-readers-file>=0.4.0",
  "psycopg[binary]>=3.3",
  "pydantic-settings>=2.14.0",
  "email-validator>=2.0",
  "qdrant-client>=1.17.0",
  "redis>=7.4.0",
  "sqlalchemy[asyncio]>=2",
  "uvicorn[standard]>=0.32",
  "e2b>=2.20.3",
  "langfuse>=4.5.1",
  "langchain>=0.3",
  "slowapi>=0.1.9",
  "google-cloud-discoveryengine>=0.13.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pytest-asyncio>=0.25",
  "ruff>=0.9",
  "pytest>=8",
]
eval = [
    "datasets>=2.14",
    "langchain-google-vertexai>=2.0",
    "ragas>=0.4,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = [
  "api",
  "agents",
  "graph",
  "ingestion",
  "memory",
  "observability",
  "tools",
  "evals",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["alembic/script.py.mako"]
src = [
  "alembic",
  "api",
  "agents",
  "graph",
  "ingestion",
  "memory",
  "observability",
  "tools",
  "evals",
  "scripts",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["evals", "tests"]
pythonpath = ["."]
markers = [
  "integration: requires DATABASE_URL and running Postgres",
  "eval: RAGAS LLM evals; run with RUN_EVAL=1 and uv sync --group eval",
]
addopts = ["-m", "not integration and not eval"]
asyncio_mode = "auto"
